--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+decrease_conquer/data/*
 
 # Created by https://www.gitignore.io/api/clion,cmake,macos
 # Edit at https://www.gitignore.io/?templates=clion,cmake,macos
